<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    <LinearLayout
    	android:orientation="vertical"
    	android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
    	android:paddingLeft="@dimen/activity_horizontal_margin"
   		android:paddingRight="@dimen/activity_horizontal_margin"
    	android:paddingTop="@dimen/activity_vertical_margin">
    	<LinearLayout 
    	    android:id="@+id/eUserNameLayout"
    	    android:orientation="horizontal"
    	    android:layout_width="fill_parent"
    	    android:layout_height="fill_parent">
    	    <TextView
    	        android:text="@string/userName"
    	        android:id="@+id/eUserName"
    	        android:textColor="#222222"
    	        android:layout_width="wrap_content"
    	        android:layout_height="40dip"
    	        android:layout_marginLeft="5dip"
    	        android:textSize="18sp"
    	        android:gravity="center_vertical">    	        
    	    </TextView>
    	    <EditText
    	        android:id="@+id/eUserNameText"
    	        android:singleLine="true"
    	        android:layout_width="fill_parent"
    	        android:layout_height="wrap_content"
    	        android:layout_marginLeft="0dip">    	        
    	    </EditText>
    	</LinearLayout>
    	<LinearLayout 
    	    android:id="@+id/realNameLayout"
    	    android:orientation="horizontal"
    	    android:layout_width="fill_parent"
    	    android:layout_height="fill_parent">
    	    <TextView
    	        android:text="@string/realname"
    	        android:id="@+id/realName"
    	        android:textColor="#222222"
    	        android:layout_width="wrap_content"
    	        android:layout_height="40dip"
    	        android:layout_marginLeft="5dip"
    	        android:textSize="18sp"
    	        android:gravity="center_vertical">    	        
    	    </TextView>
    	    <EditText
    	        android:hint="@string/rnhint"
    	        android:id="@+id/realNameText"
    	        android:singleLine="true"
    	        android:inputType="textPhonetic" 
    	        android:layout_width="fill_parent"
    	        android:layout_height="wrap_content"
    	        android:layout_marginLeft="0dip">    	        
    	    </EditText>
    	</LinearLayout>
    	<LinearLayout 
    	    android:id="@+id/genderLayout"
    	    android:orientation="horizontal"
    	    android:layout_width="wrap_content"
    	    android:layout_height="wrap_content">
    	    <TextView
    	        android:text="@string/gender"
    	        android:id="@+id/gender"
    	        android:textColor="#222222"
    	        android:layout_width="wrap_content"
    	        android:layout_height="40dip"
    	        android:layout_marginLeft="5dip"
    	        android:textSize="18sp"
    	        android:gravity="center_vertical">    	        
    	    </TextView>
			<RadioGroup 
			    android:id="@+id/genderGroup"
			    android:layout_width="wrap_content"
    	   		android:layout_height="wrap_content"
			  	android:orientation="horizontal"
			    >
			<RadioButton
			    android:id="@+id/male"
			    android:layout_width="wrap_content"
    	   		android:layout_height="wrap_content"
    	   		android:text="@string/male">
			</RadioButton>
			<RadioButton
			   android:id="@+id/female"
			    android:layout_width="wrap_content"
    	   		android:layout_height="wrap_content"
    	   		android:text="@string/female">
			</RadioButton>
		</RadioGroup>
    	</LinearLayout>
    	<LinearLayout
    	    android:id="@+id/pwdLayout02"
    	    android:orientation="horizontal"
    	    android:layout_width="fill_parent"
    	    android:layout_height="wrap_content">
    	    <TextView
    	        android:text="@string/password"
    	        android:id="@+id/password"
    	        android:textColor="#222222"
    	        android:layout_width="wrap_content"
    	        android:layout_height="40dip"
    	        android:layout_marginLeft="5dip"
    	        android:textSize="18sp"
    	        android:gravity="center_vertical">    	        
    	    </TextView>
    	    <EditText
    	        android:hint="@string/pwdhint"
    	        android:id="@+id/pwdText2"
    	        android:singleLine="true"
    	        android:layout_width="fill_parent"
    	        android:layout_height="wrap_content"
    	        android:inputType="textPassword"
    	        android:layout_marginLeft="0dip">    	        
    	    </EditText>
    	</LinearLayout>
    	<LinearLayout
    	    android:id="@+id/pwdLayout03"
    	    android:orientation="horizontal"
    	    android:layout_width="fill_parent"
    	    android:layout_height="wrap_content">
    	    <TextView
    	        android:text="@string/password2"
    	        android:id="@+id/password3"
    	        android:textColor="#222222"
    	        android:layout_width="wrap_content"
    	        android:layout_height="40dip"
    	        android:layout_marginLeft="5dip"
    	        android:textSize="18sp"
    	        android:gravity="center_vertical">    	        
    	    </TextView>
    	    <EditText
    	        android:hint="@string/pwdhint2"
    	        android:id="@+id/pwdText3"
    	        android:singleLine="true"
    	        android:layout_width="fill_parent"
    	        android:layout_height="wrap_content"
    	        android:inputType="textPassword"
    	        android:layout_marginLeft="0dip">    	        
    	    </EditText>
    	</LinearLayout>
		<LinearLayout 
    	    android:id="@+id/telLayout"
    	    android:orientation="horizontal"
    	    android:layout_width="fill_parent"
    	    android:layout_height="fill_parent">
    	    <TextView
    	        android:text="@string/telephone"
    	        android:id="@+id/phone"
    	        android:textColor="#222222"
    	        android:layout_width="wrap_content"
    	        android:layout_height="40dip"
    	        android:layout_marginLeft="5dip"
    	        android:textSize="18sp"
    	        android:gravity="center_vertical">    	        
    	    </TextView>
    	    <EditText
    	        android:hint="@string/telehint"
    	        android:id="@+id/telText"
    	        android:singleLine="true"
    	        android:inputType="number"
    	        android:layout_width="fill_parent"
    	        android:layout_height="wrap_content"
    	        android:layout_marginLeft="0dip">    	        
    	    </EditText>
    	</LinearLayout>
    	<LinearLayout
    	    android:id="@+id/eButtonLayout"
    	    android:orientation="horizontal"
    	    android:layout_width="wrap_content"
    	    android:layout_height="wrap_content">
    	    <Button
    	        android:id="@+id/enter"
    	        android:layout_width="102dp"
    	        android:layout_height="40dip"
    	        android:gravity="center"
    	        android:text="@string/enter"
    	        android:textSize="18sp" >
    		</Button>
    	    <Button
    	        android:id="@+id/reset"
    	        android:layout_width="102dp"
    	        android:layout_height="40dip"
    	        android:gravity="center"
    	        android:text="@string/reset"
    	        android:textSize="18sp" >
			</Button>
			<Button
    	        android:id="@+id/back"
    	        android:layout_width="102dp"
    	        android:layout_height="40dip"
    	        android:gravity="center"
    	        android:text="@string/back"
    	        android:textSize="18sp" >
			</Button>
    	</LinearLayout>
    	
    </LinearLayout>
</LinearLayout>