<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/titleblue"
        android:gravity="center"
        android:text="设置界面"
        android:textColor="#fff"
        android:textSize="25dip" >
    </TextView>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dip"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="11dip"
                android:text="@string/userName"
                android:textSize="20dip" >
            </TextView>

            <TextView
                android:id="@+id/userinfoTextView01"
                android:layout_marginLeft="3sp"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text=""
                android:textSize="20dip" >
            </TextView>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/userinfoLinearLayout02"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="11dip"
                android:text="@string/password"
                android:textColor="#000000"
                android:textSize="20dip" >
            </TextView>

            <EditText
                android:id="@+id/userinfoEditText02"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:textSize="20dip" >
            </EditText>
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="11dip"
                android:text="@string/realname"
                android:textSize="20dip" >
            </TextView>

            <EditText
                android:id="@+id/userinfoEditText03"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:textSize="20dip" >
            </EditText>
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="11dip"
                android:text="@string/gender"
                android:textSize="20dip" >
            </TextView>

            <RadioGroup
                android:id="@+id/userinfoRadioGroup01"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <RadioButton
                    android:id="@+id/userinfoRadioButton01"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/male" >
                </RadioButton>

                <RadioButton
                    android:id="@+id/userinfoRadioButton02"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/female" >
                </RadioButton>
            </RadioGroup>
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="11dip"
                android:singleLine="true"
                android:text="@string/telephone"
                android:textSize="20dip" >
            </TextView>

            <EditText
                android:id="@+id/userinfoEditText04"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textSize="20dip" >
            </EditText>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/userinfoButton01"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="11dip"
            android:text="修改信息"
            android:textSize="20dip" >
        </Button>
    </LinearLayout>

</LinearLayout>