<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="55dp"
    android:orientation="horizontal"
    android:background="@drawable/bottom_bar">
    <LinearLayout 
        android:id="@+id/id_tab_waimai"
        android:orientation="vertical"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:gravity="center"
        android:layout_weight="1">
        <TextView
        android:id="@+id/waimai"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/waimai"
        android:textColor="#992211"
        android:textSize="20dp"/>
        <TextView 
            android:id="@+id/waimai_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#992211"
            android:text="外卖"/>
    </LinearLayout>
 	<LinearLayout 
        android:id="@+id/id_tab_diancan"
        android:orientation="vertical"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:gravity="center"
        android:layout_weight="1">
        <TextView
        android:id="@+id/diancan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/diancan"
        android:textColor="#cccccc"
        android:textSize="20dp"/>
        <TextView
             android:id="@+id/diancan_text" 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#cccccc"
            android:text="点餐"/>
   </LinearLayout>
   <LinearLayout 
        android:id="@+id/id_tab_order"
        android:orientation="vertical"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:gravity="center"
        android:layout_weight="1">
        <TextView
        android:id="@+id/order"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/order"
        android:textColor="#cccccc"
        android:textSize="20dp"/>
        <TextView 
            android:id="@+id/order_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#cccccc"
            android:text="订单"/>
    </LinearLayout>
    <LinearLayout 
        android:id="@+id/id_tab_my"
        android:orientation="vertical"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:gravity="center"
        android:layout_weight="1">
        <TextView
        android:id="@+id/my"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/my"
        android:textColor="#cccccc"
        android:textSize="20dp"/>
        <TextView 
            android:id="@+id/my_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#cccccc"
            android:text="我的"/>
	</LinearLayout>
    
</LinearLayout>