<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    tools:context=".RegAndLog" >
    <LinearLayout
    	android:orientation="vertical"
    	android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
    	android:paddingLeft="@dimen/activity_horizontal_margin"
   		android:paddingRight="@dimen/activity_horizontal_margin"
    	android:paddingTop="@dimen/activity_vertical_margin">
    	<LinearLayout 
    	    android:id="@+id/userNameLayout"
    	    android:orientation="horizontal"
    	    android:layout_width="fill_parent"
    	    android:layout_height="fill_parent">
    	    <TextView
    	        android:text="@string/userName"
    	        android:id="@+id/userName"
    	        android:textColor="#222222"
    	        android:layout_width="wrap_content"
    	        android:layout_height="40dip"
    	        android:layout_marginLeft="5dip"
    	        android:textSize="18sp"
    	        android:gravity="center_vertical">    	        
    	    </TextView>
    	    <EditText
    	        android:id="@+id/userNameText"
    	        android:singleLine="true"
    	        android:layout_width="fill_parent"
    	        android:layout_height="wrap_content"
    	        android:layout_marginLeft="0dip">    	        
    	    </EditText>
    	</LinearLayout>
    	<LinearLayout
    	    android:id="@+id/pwdLayout"
    	    android:orientation="horizontal"
    	    android:layout_width="fill_parent"
    	    android:layout_height="wrap_content">
    	    <TextView
    	        android:text="@string/password"
    	        android:id="@+id/password"
    	        android:textColor="#222222"
    	        android:layout_width="wrap_content"
    	        android:layout_height="40dip"
    	        android:layout_marginLeft="5dip"
    	        android:textSize="18sp"
    	        android:gravity="center_vertical">    	        
    	    </TextView>
    	    <EditText
    	        android:id="@+id/pwdText"
    	        android:singleLine="true"
    	        android:layout_width="fill_parent"
    	        android:layout_height="wrap_content"
    	        android:inputType="textPassword"
    	        android:layout_marginLeft="0dip">    	        
    	    </EditText>
    	</LinearLayout>
    	<LinearLayout
    	    android:id="@+id/buttonLayout"
    	    android:orientation="horizontal"
    	    android:layout_width="fill_parent"
    	    android:layout_height="wrap_content">
    	    <Button
    	        android:id="@+id/loginLog"
    	        android:layout_width="fill_parent"
    	        android:layout_height="40dip"
    	        android:gravity="center"
    	        android:text="@string/login"
    	        android:textSize="18sp" >
    		</Button>
    	    <!-- <Button
    	        android:id="@+id/loginClear"
    	        android:layout_width="153dp"
    	        android:layout_height="40dip"
    	        android:gravity="center"
    	        android:text="@string/clear"
    	        android:textSize="18sp" --> 

    	</LinearLayout>
    	<LinearLayout
    	    android:id="@+id/buttonLayout02"
    	    android:orientation="horizontal"
    	    android:layout_width="fill_parent"
    	    android:layout_height="wrap_content">
    	    <Button
    	        android:id="@+id/loginEnroll"
    	        android:layout_width="fill_parent"
    	        android:layout_height="40dip"
    	        android:gravity="center"
    	        android:text="@string/enroll"
    	        android:textSize="18sp" >
    		</Button>
    		<!-- <Button
    		    android:id="@+id/loginQuit"
    		    android:layout_width="153dp"
    		    android:layout_height="40dip"
    		    android:gravity="center"
    		    android:text="@string/quit"
    		    android:textSize="18sp" > 
    		</Button>-->
		</LinearLayout>
    </LinearLayout>
</LinearLayout>



